--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
-    "json-server": "^0.16.3",
+    "axios": "^0.27.2",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.19.2",
+    "react-query": "^3.39.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "serve-json": "^1.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -20,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve-json": "json-server --watch db.json --port 4000"
+    "serve-json": "json-server --watch db.json --port 4000",
+    "type": "module"
   },
   "eslintConfig": {
     "extends": [
